nose que hice, pro puedes reeformular el inicio de sesion, de hecho nose a que nos deberiamos loguear

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
     <title>Berry Coporation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    hola mundo
+    <div>
+        <h1> HOLA LOGUEATE PORFA </h1>
+        <form class="formulario" >
+            <input class="formulario-input" type="email" required placeholder="Ingresa tu correo" minlength="4">
+            <input class="formulario-input" type="password" placeholder="Ingresa tu contraseña">
+            <input class="formulario-input formulario-submit" type="submit" value="Iniciar Sesion">
+        </form>
+    </div>
     
 </body>
 </html>
